--- a/style.css
+++ b/style.css
@@ -3,19 +3,19 @@ h2 {
     font-size: 1.2em;
     color:#94b767;
     padding:5px 0px 0px 7px;
-    background:url(/images/verh.gif) no-repeat left top;
+    background:url(images/verh.gif) no-repeat left top;
     }
 
 .b1 {
     width:424px;
-    background:url(/images/telo.gif) repeat-y;
+    background:url(images/telo.gif) repeat-y;
 }
 
 .b3 {
     font-family: Tahoma;
     font-size: 0.8em;
     text-indent:7%;
-    background:url(/images/niz.gif) no-repeat left bottom;
+    background:url(images/niz.gif) no-repeat left bottom;
     margin:0px;
     padding:5px 5px 15px 5px;
 }
